--- a/advertising.html
+++ b/advertising.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Advertising ● Ruang Cipta Nusantara</title>
+    <title>Advertising ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -32,48 +32,46 @@
                     </div>
                     <div class="container">
                         <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
+
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/advertising/banner.jpeg" class="card-img-top" alt="...">
+                                    <img src="images_produk/advertising/standing_banner/standing_banner.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Banner</h5>
-                                        <p>Custom Banner disini + Free Desain ✅️
+                                        <h5 class="card-title">Standing Banner</h5>
+                                        <p>Custom Standing Banner disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <a href="standing_banner.html" class="btn btn-primary">Lihat</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/advertising/umbul.umbul.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Umbul-Umbul</h5>
+                                        <p>Custom Umbul-Umbul disini + Free Desain ✅️
+                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/advertising/x.banner.jpeg" class="card-img-top"
-                                        alt="...">
+                                    <img src="images_produk/advertising/bendera.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">X Banner</h5>
-                                        <p>Custom X Banner disini + Free Desain ✅️
+                                        <h5 class="card-title">Bendera</h5>
+                                        <p>Custom Bendera disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="card">
-                                    <img src="#" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Roll Banner</h5>
-                                        <p>Custom Roll Banner disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                         <br>
-                        <hr>
-                        
+                        <hr>                     
                         <div class="container">
                             <div class="row text-center">
                                 <div class="col-lg-2 col-md-1 col-sm-2">
