--- a/branding_motor.html
+++ b/branding_motor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Undangan ● Percetakan Ruang Cipta</title>
+    <title>Branding Motor ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -28,49 +28,31 @@
                 <!-- packaging -->
                 <section class="app_banner_main">
                     <div class="card-hightlight">
-                        <span class="highlight-card">Undangan</span>
+                        <span class="highlight-card">Branding Motor</span>
                     </div>
                     <div class="container">
                         <div class="row text-center">
-                            <div class="col-lg-3 col-sm-6">
+                            <div class="col-lg-4 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/udangan.lipat.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/branding/stiker_motor/gambar1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Lipat</h5>
-                                        <p>Custom Undangan Lipat disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <h5 class="card-title">Gambar 1</h5>
+                                        <p></p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6">
+                            <div class="col-lg-4 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/undangan.blangko.jpg" class="card-img-top"
-                                        alt="...">
+                                    <img src="images_produk/branding/stiker_motor/gambar2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Blangko</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-sm-6">
-                                <div class="card">
-                                    <img src="images_produk/undangan/undangan.single.hard.cover.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Undangan Single Hard Cover</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <h5 class="card-title">Gambar 2</h5>
+                                        <p></p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                         <br>
                         <hr>
                         
