--- a/footer.html
+++ b/footer.html
@@ -44,7 +44,7 @@
                     <div class="about-footer">
                         <h3>Tentang Website</h3>
                         <p style="text-align: justify;">
-                            Website Ruang Cipta Nusantara. Kami memperkenalkan produk-produk terbaik kami kepada
+                            Website Percetakan Ruang Cipta. Kami memperkenalkan produk-produk terbaik kami kepada
                             Anda. Di percetakan Ruang Cipta Nusantara kalian Bisa Custom Gambar Sesuai dengan
                             keinginan kalian Loh...!! Yuk buruan di Order klik tombol "Order
                             Via Whatsapp" di Halaman Utama atau bisa klik nomor di Kontak kanan
