--- a/foto_cinematography.html
+++ b/foto_cinematography.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Souvenir ● Percetakan Ruang Cipta</title>
+    <title>Foto & Cinematography ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -25,57 +25,45 @@
                 <div class="include-navbar"></div>
                 <br>
 
-                <!-- souvenir -->
+                <!-- packaging -->
                 <section class="app_banner_main">
                     <div class="card-hightlight">
-                        <span class="highlight-card">Souvenir</span>
+                        <span class="highlight-card">Foto & Cinematography</span>
                     </div>
                     <div class="container">
                         <div class="row text-center">
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/tas.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar1.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Handbag Model 1</h5>
-                                        <p>Custom Handbag disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Standing Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/handbag.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar2.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Handbag Model 2</h5>
-                                        <p>Custom Handbag disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">X Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/kotak.makan.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar3.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Kotak Makan</h5>
-                                        <p>Custom Kotak Makan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Roll Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/mug3.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar9.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Mug</h5>
-                                        <p>Custom Mug disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Roll Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
@@ -84,48 +72,36 @@
                         <div class="row text-center">
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/tumbler2.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar18.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Tumbler</h5>
-                                        <p>Custom Tumbler disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/handuk.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar16.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Handuk</h5>
-                                        <p>Custom Handuk disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Banner Pecel Lele</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/payung.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar17.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Payung</h5>
-                                        <p>Custom Payung disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Umbul-Umbul</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/kipas.tangan.jpeg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar19.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Kipas Tangan</h5>
-                                        <p>Custom Kipas Tangan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Bendera</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
@@ -134,25 +110,74 @@
                         <div class="row text-center">
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/pena.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar12.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Pena</h5>
-                                        <p>Custom Pena disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/souvenir/pena_cabe.jpeg" class="card-img-top" alt="...">
+                                    <img src="images_produk/foto_cinematography/gambar13.jfif" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Pena Cabe</h5>
-                                        <p>Custom Pena Cabe disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <h5 class="card-title">Banner Pecel Lele</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar15.jfif" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner Pecel Lele</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar14.jfif" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner Pecel Lele</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row text-center">
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar5.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar7.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar8.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner</h5> -->
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/foto_cinematography/gambar10.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <!-- <h5 class="card-title">Banner</h5> -->
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
@@ -160,7 +185,7 @@
                         </div>
                         <br>
                         <hr>
-
+                        
                         <div class="container">
                             <div class="row text-center">
                                 <div class="col-lg-2 col-md-1 col-sm-2">
@@ -174,10 +199,9 @@
                                 </div>
                             </div>
                         </div>
-
+                        
                     </div>
                 </section>
-
             </div>
         </div>
     </header>
