--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Beranda ● Ruang Cipta Nusantara</title>
+  <title>Beranda ● Percetakan Ruang Cipta</title>
   <link href="images/icon.ico" rel="icon" type="image/png" />
   <!-- basic -->
   <meta charset="utf-8" />
@@ -21,10 +21,7 @@
 </head>
 
 <body class="main-layout">
-
-  <!-- navigation top up-->
-  <!-- <div class="include-navbar_up"></div> -->
-
+  
   <header>
     <div class="header">
 
@@ -45,9 +42,9 @@
                 <div class="col-md-12 col-lg-7">
                   <div class="home_titlepage">
                     <span class="about_me">Selamat Datang di</span>
-                    <h2>Ruang Cipta Nusantara</h2>
+                    <h2>Percetakan Ruang Cipta</h2>
                     <p style="text-align: justify">
-                      "Ruang Cipta Nusantara bisa jadi solusi kebutuhan kamu"
+                      "Percetakan Ruang Cipta bisa menjadi solusi kebutuhan kamu"
                       <br>Percetakan Sahabat UMKM
                       <br>⚡️⚡️ Same Day Service Cetak Jumlah Kecil & Besar Digital Printing
                       <br>• Percetakan
@@ -78,10 +75,10 @@
             <p>&nbsp;</p>
             <p>
               Percetakan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Souvenir&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Packaging&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Advertising&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Plakat&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Undangan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Foto
-              & Cinematography&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Rental Office Equipment
+              & Cinematography&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Rental Office Equipment&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Branding Kendaraan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Yasin
             </p>
             <p>&nbsp;</p>
-            <p>Ruang Cipta Nusantara hadir menjadi solusi untuk segala kebutuhan cetak custom Anda. <br>Kami siap
+            <p>Percetakan Ruang Cipta hadir menjadi solusi untuk segala kebutuhan cetak custom Anda. <br>Kami siap
               membantu Anda untuk mewujudkan ide kreatifitas produk yang berkualitas tinggi.</p>
           </div>
           <div class="container">
@@ -89,31 +86,34 @@
             <div class="row text-center">
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/percetakan.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/percetakan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Percetakan</h5>
-                    <!-- <p>Jenis-jenis produk percetakan : Amplop, Blocknote, Brosur, Buku Agenda, Buku Jilid Block, 
-                                Buku Jilid Spiral, Hangtang ID Card, Kalender Dinding, Kalender Meja, Kartu nama,
-                                Majalah, Map, Nota, Papan Nama, Pita Sablon, Sertifikat, Stample dan Tali Lanyard</p> -->
+                    <!-- <p>
+                      Jenis-jenis produk percetakan : Amplop, Blocknote, Brosur, Buku Agenda, Buku Jilid Block, 
+                      Buku Jilid Spiral, Hangtang ID Card, Kalender Dinding, Kalender Meja, Kartu nama,
+                      Majalah, Map, Nota, Papan Nama, Pita Sablon, Sertifikat, Stample dan Tali Lanyard
+                    </p> -->
                     <a href="percetakan.html" class="btn btn-primary">Lihat</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/souvenir.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/souvenir.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Souvenir</h5>
-                    <!-- <p>Jenis-jenis produk Souvenir : Bantal, Handbag, Handuk, Kipas Tangan, Kotak Makan, Mug, 
-                                Payung, Pena, Tas, Tumbler
-                            </p> -->
+                    <!-- <p>
+                      Jenis-jenis produk Souvenir : Bantal, Handbag, Handuk, Kipas Tangan, Kotak Makan, Mug, 
+                      Payung, Pena, Tas, Tumbler
+                    </p> -->
                     <a href="souvenir.html" class="btn btn-primary">Lihat</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/packaging.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/packaging.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Packaging</h5>
                     <!-- <p>Text
@@ -124,7 +124,7 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/advertising.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/advertising.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Advertising</h5>
                     <!-- <p>Text
@@ -138,7 +138,7 @@
             <div class="row text-center">
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/plakat.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/plakat.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Plakat</h5>
                     <!-- <p>Text
@@ -149,7 +149,7 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="images/produk/cover_depan_kategori/undangan.jpg" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/undangan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Undangan</h5>
                     <!-- <p>Text
@@ -160,31 +160,54 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="#" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/foto_cinematography.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Foto & Cinematography</h5>
                     <!-- <p>Text
                                         </p> -->
-                    <a href="#" class="btn btn-primary">Lihat</a>
+                    <a href="foto_cinematography.html" class="btn btn-primary">Lihat</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="card">
-                  <img src="#" class="card-img-top" alt="...">
+                  <img src="images_produk/cover_depan_kategori/rental_office_equipment.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Rental Office Equipment</h5>
                     <!-- <p>Text
                                         </p> -->
-                    <a href="#" class="btn btn-primary">Lihat</a>
+                    <a href="rental.html" class="btn btn-primary">Lihat</a>
                   </div>
                 </div>
               </div>
+              <div class="row text-center">
+                <div class="col-lg-3 col-sm-6">
+                  <div class="card">
+                    <img src="images_produk/cover_depan_kategori/branding.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Branding Kendaraan</h5>
+                      <!-- <p>Text
+                              </p> -->
+                      <a href="branding.html" class="btn btn-primary">Lihat</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                  <div class="card">
+                    <img src="images_produk/cover_depan_kategori/yasin.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Yasin</h5>
+                      <!-- <p>Text
+                              </p> -->
+                      <a href="yasin.html" class="btn btn-primary">Lihat</a>
+                    </div>
+                  </div>
+                </div>
+                </div>
             </div>
             <br>
           </div>
         </section>
-
 
       <br>
       <br>
@@ -197,7 +220,7 @@
                 <div class="row text-center">
                   <div class="col-lg-2 col-sm-6">
                     <div class="card">
-                      <img src="images/our_customer/tel.png" class="card-img-top" alt="...">
+                      <img src="images/pelanggan/tel.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h6 class="card-title">PT Tanjungenim Lestari <br> Pulp & Paper</h6>
                         <!-- <p>Text
@@ -207,9 +230,9 @@
                   </div>
                   <div class="col-lg-2 col-sm-6">
                     <div class="card">
-                      <img src="images/our_customer/bni.png" class="card-img-top" alt="...">
+                      <img src="images/pelanggan/pln.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h6 class="card-title">PT Bank Negara Indonesia Tbk</h6>
+                        <h6 class="card-title">PT Perusahaan Listrik Negara</h6>
                         <!-- <p>Text
                               </p> -->
                       </div>
@@ -217,7 +240,57 @@
                   </div>
                   <div class="col-lg-2 col-sm-6">
                     <div class="card">
-                      <img src="images/our_customer/pertamina.png" class="card-img-top" alt="...">
+                      <img src="images/pelanggan/plg.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Pemerintah Kota Palembang</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/banyuasin.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Banyuasin</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/unsri.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Universitas Sriwijaya</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/lawang.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Empat Lawang</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/kpu.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Komisi Pemilihan Umum</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/pertamina.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h6 class="card-title">PT Pertamina (Persero)</h6>
                         <!-- <p>Text
@@ -227,17 +300,7 @@
                   </div>
                   <div class="col-lg-2 col-sm-6">
                     <div class="card">
-                      <img src="images/our_customer/pln.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h6 class="card-title">PT Perusahaan Listrik Negara</h6>
-                        <!-- <p>Text
-                                          </p> -->
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-2 col-sm-6">
-                    <div class="card">
-                      <img src="images/our_customer/pama.png" class="card-img-top" alt="...">
+                      <img src="images/pelanggan/pama.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h6 class="card-title">PT Pamapersada Nusantara</h6>
                         <!-- <p>Text
@@ -247,7 +310,27 @@
                   </div>
                   <div class="col-lg-2 col-sm-6">
                     <div class="card">
-                      <img src="images/our_customer/mandiri.png" class="card-img-top" alt="...">
+                      <img src="images/pelanggan/bawaslu.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Bawaslu Provinsi</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/pali.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">Pali</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/mandiri.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h6 class="card-title">PT Bank Mandiri</h6>
                         <!-- <p>Text
@@ -255,6 +338,66 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/sumsel.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Sumsel Babel</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/bsi.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Syariah Indonesia</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/btn.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Tabungan Negara Syariah</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/bni.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Negara Indonesia</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/muamalat.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Muamalat Indonesia</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/pelanggan/bpr.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank BPR Sumsel</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>              
                 </div>
               </span>
             </div>
