--- a/navbar.html
+++ b/navbar.html
@@ -26,23 +26,23 @@
                   <a class="nav-link" href="index.html">Beranda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="percetakan.html">Percetakan</a>
+                  <a class="nav-link" href="produk.html">Produk-produk</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="souvenir.html">Souvenir</a>
+                  <a class="nav-link" href="kontak.html">Kontak</a>
+                </li>
+                <!-- <li class="nav-item">
+                  <a class="nav-link" href="foto_cinematography.html">Foto & Cinematography</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="packaging.html">Packaging</a>
+                  <a class="nav-link" href="#.html">Rental Office Equipment</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="advertising.html">Advertising</a>
+                  <a class="nav-link" href="branding.html">Branding Kendaraan</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="plakat.html">Plakat</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="undangan.html">Undangan</a>
-                </li>
+                  <a class="nav-link" href="yasin.html">Yasin</a>
+                </li> -->
               </ul>
             </div>
           </nav>
