--- a/packaging.html
+++ b/packaging.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Packaging ● Ruang Cipta Nusantara</title>
+    <title>Packaging ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -32,117 +32,116 @@
                     </div>
                     <div class="container">
                         <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/softbox.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/packaging/softbox.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Softbox</h5>
-                                        <p>Custom Softbox disini + Free Desain ✅️
+                                        <h5 class="card-title">Kotak Parfum</h5>
+                                        <p>Custom Kotak Parfum disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/standing.pouch.jpg" class="card-img-top"
+                                    <img src="images_produk/packaging/standing.pouch.jpg" class="card-img-top"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Standing Pouch</h5>
                                         <p>Custom Standing Pouch disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/snackbox.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/packaging/snackbox.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Snackbox</h5>
                                         <p>Custom Snackbox disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/box2.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Packaging Model 1</h5>
-                                        <p>Custom Packaging disini + Free Desain ✅️
-                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="card">
-                                    <img src="images/produk/packaging/box1.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Packaging Model 2</h5>
-                                        <p>Custom Packaging disini + Free Desain ✅️
-                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="card">
-                                    <img src="images/produk/packaging/box.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Packaging Model 3</h5>
-                                        <p>Custom Packaging disini + Free Desain ✅️
-                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="card">
-                                    <img src="images/produk/packaging/kantong.sablon.jpg" class="card-img-top"
+                                    <img src="images_produk/packaging/kantong.sablon.jpg" class="card-img-top"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Kantong Sablon</h5>
                                         <p>Custom Kantong Sablon disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                        </div>
+                        <div class="row text-center">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/packaging.jpeg" class="card-img-top" alt="...">
+                                    <img src="images_produk/packaging/box2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Box Model 1</h5>
-                                        <p>Custom Box disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                        <h5 class="card-title">Packaging Model 1</h5>
+                                        <p>Custom Packaging disini + Free Desain ✅️
+                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/packaging/box4.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/packaging/box1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Box Model 2 </h5>
-                                        <p>Custom Box disini + Free Desain ✅️
+                                        <h5 class="card-title">Packaging Model 2</h5>
+                                        <p>Custom Packaging disini + Free Desain ✅️
+                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/packaging/box.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Packaging Model 3</h5>
+                                        <p>Custom Packaging disini + Free Desain ✅️
+                                            Kalian Bisa Custom Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/packaging/box4.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Packaging Model 4</h5>
+                                        <p>Custom Packaging disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row text-center">
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/packaging/packaging.jpeg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Kotak Makanan</h5>
+                                        <p>Custom Kotak Makanan disini + Free Desain ✅️
+                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
