--- a/plakat.html
+++ b/plakat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Plakat ● Ruang Cipta Nusantara</title>
+    <title>Plakat ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -32,39 +32,51 @@
                     </div>
                     <div class="container">
                         <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/plakat/plakat.akrilik.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/plakat/plakat.akrilik.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Plakat Akrilik Model 1</h5>
                                         <p>Custom Plakat Akrilik disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/plakat/plakat.akrilik1.jpg" class="card-img-top"
+                                    <img src="images_produk/plakat/plakat.akrilik1.jpg" class="card-img-top"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Plakat Akrilik Model 2</h5>
                                         <p>Custom Plakat Akrilik disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/plakat/plakat.akrilik2.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/plakat/plakat.akrilik2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Plakat Akrilik Model 3</h5>
-                                        <p>Custom Plakat Akrilik disini + Free Desain ✅️
+                                        <h5 class="card-title">Plakat Resin Plat Grafo</h5>
+                                        <p>Custom Plakat Resin disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/plakat/piala.resin.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Plakat Kuningan</h5>
+                                        <p>Custom Kuningan disini + Free Desain ✅️
+                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
@@ -74,39 +86,28 @@
                     </div>
                     <div class="container">
                         <div class="row text-center">
-                            <div class="col-lg-4 col-sm-6">
+
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/plakat/piala.resin.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Plakat Kayu</h5>
-                                        <p>Custom Piala Resin disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
-                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="card">
-                                    <img src="images/produk/plakat/plakat.kayu.jpg" class="card-img-top"
+                                    <img src="images_produk/plakat/plakat.kayu.jpg" class="card-img-top"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Plakat Kayu Plat</h5>
                                         <p>Custom Plakat Kayu disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images/produk/plakat/plakat.kayu.plat.kuningan.grafo.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/plakat/plakat.kayu.plat.kuningan.grafo.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Plakat Kayu Plat Kuningan Grafo</h5>
                                         <p>Custom Plakat Kayu Kuningan Grafo disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di percetakan Ruang Cipta Nusantara</p>
+                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
