--- a/rental.html
+++ b/rental.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Undangan ● Percetakan Ruang Cipta</title>
+    <title>Rental Office Equipment ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -28,43 +28,62 @@
                 <!-- packaging -->
                 <section class="app_banner_main">
                     <div class="card-hightlight">
-                        <span class="highlight-card">Undangan</span>
+                        <span class="highlight-card">Rental Office Equipment</span>
                     </div>
                     <div class="container">
                         <div class="row text-center">
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/udangan.lipat.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/rental/printer1.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Lipat</h5>
-                                        <p>Custom Undangan Lipat disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <h5 class="card-title">Scanner Brother ADS-2200</h5>
+                                        <p>
+                                            Scanner Brother ADS-2200 merupakan scanner yang sangat handal untuk kebutuhan 
+                                            yang cukup besar di tempat kerja para sobat di karenakan mampu memberikan hasil 
+                                            scanning yang sangat tajam dan jela.
+                                        </p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/undangan.blangko.jpg" class="card-img-top"
-                                        alt="...">
+                                    <img src="images_produk/rental/printer2.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Blangko</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <h5 class="card-title">HP Laserjet 107 W</h5>
+                                        <p>
+                                            HP Laserjet 107 W dirancang khusus untuk anda yang menggunakan printer untuk kebutuhan 
+                                            mencetak dengan intensitas tinggi. Printer ini memungkinkan anda untuk dapat mencetak, 
+                                            dengan kecepatan dan volume yang tinggi.
+                                        </p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/undangan.single.hard.cover.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/rental/printer3.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Single Hard Cover</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
-                                            Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
-                                            custom sekarang Juga di Percetakan Ruang Cipta</p>
+                                        <h5 class="card-title">HP Officejet 7740</h5>
+                                        <p>
+                                            HP OJ 7740 merupakan printer multifungsi dengan fitur print, scan, copy dan fax yang dapat 
+                                            mempermudah pekerjaan sobat dalam mencetak, memindai, dan menyalin dokumen. Printer ini juga 
+                                            memiliki hasil cetak warna yang sangat menonjol dengan mencetak hingga ukuran kertas A3.
+                                        </p>
+                                        <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="card">
+                                    <img src="images_produk/rental/printer4.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">DocuCentre 3065</h5>
+                                        <p>
+                                            DocuCentre 3065 merupakan sudah tidak diragukan banyak fitur unggulan seperti Kualitas cetak sangat bagus, 
+                                            akurasi warna sangat tepat dan kecepatan yang sangat tinggi. DocuCentre 3065 mempunyai kualitas lebih bagus 
+                                            di antaranya resolusi tinggi 1,200 x 1,200 dpi dan sistem memori 4GB
+                                        </p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
