--- a/standing_banner.html
+++ b/standing_banner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Undangan ● Percetakan Ruang Cipta</title>
+    <title>Standing Banner ● Percetakan Ruang Cipta</title>
     <link href="images/logo.png" rel="icon" type="image/png">
     <!-- basic -->
     <meta charset="utf-8">
@@ -28,16 +28,17 @@
                 <!-- packaging -->
                 <section class="app_banner_main">
                     <div class="card-hightlight">
-                        <span class="highlight-card">Undangan</span>
+                        <span class="highlight-card">Standing Banner</span>
                     </div>
                     <div class="container">
                         <div class="row text-center">
+
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/udangan.lipat.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/advertising/standing_banner/banner.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Lipat</h5>
-                                        <p>Custom Undangan Lipat disini + Free Desain ✅️
+                                        <h5 class="card-title">Standing Banner</h5>
+                                        <p>Custom Standing Banner disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
                                             custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
@@ -46,11 +47,11 @@
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/undangan.blangko.jpg" class="card-img-top"
+                                    <img src="images_produk/advertising/standing_banner/x.banner.jpeg" class="card-img-top"
                                         alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Blangko</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
+                                        <h5 class="card-title">X Banner</h5>
+                                        <p>Custom X Banner disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
                                             custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
@@ -59,18 +60,17 @@
                             </div>
                             <div class="col-lg-3 col-sm-6">
                                 <div class="card">
-                                    <img src="images_produk/undangan/undangan.single.hard.cover.jpg" class="card-img-top" alt="...">
+                                    <img src="images_produk/advertising/standing_banner/roll.banner.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Undangan Single Hard Cover</h5>
-                                        <p>Custom Undangan disini + Free Desain ✅️
+                                        <h5 class="card-title">Roll Banner Electric</h5>
+                                        <p>Custom Roll Banner Electric disini + Free Desain ✅️
                                             Kalian Bisa Custom Gambar Sesuai keinginan Kalian Loh...!!
                                             custom sekarang Juga di Percetakan Ruang Cipta</p>
                                         <!-- <a href="#.html" class="btn btn-primary">Lihat</a> -->
                                     </div>
                                 </div>
-                            </div>
+                            </div>                        
                         </div>
-
                         <br>
                         <hr>
                         
